Attempting to fix Google font rendering issues on mobile

--- a/scss/utils/_reset.scss
+++ b/scss/utils/_reset.scss
@@ -91,6 +91,8 @@ a:visited {
 html {
   background: $black;
   font: 100% 'Source Sans Pro', system-ui, Arial, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
